# alisp

./: CMakeLists.txt  README.md  todo.org
bench/: fibrec.py  fibtail.py
src/: main.c  tests.alisp  tests.c
src/alisp/: #scope.h#  .#scope.h  binding.c  binding.h  compare.h  eval.c  fail.h  fix.c  fix.h  form.c  form.h  frame.c  frame.h  func.c  func.h  iter.c  iter.h  lib.c  lib.h  limits.h  ls.c  ls.h  lset.c  lset.h  macros.h  multi.c  multi.h  op.c  op.h  pair.c  pair.h  parser.c  parser.h  parsers.c  parsers.h  pool.c  pool.h  pos.c  pos.h  prim.c  (+25 more)
src/alisp/libs/: abc.c  abc.h  math.c  math.h
src/alisp/types/: bool.c  bool.h  char.c  fix.c  float.c  func.c  func.h  int.c  int.h  iter.c  ls.c  ls.h  meta.c  meta.h  multi.c  nil.c  nil_type.c  pair.c  prim.c  prim.h  queue.c  reg.c  reg.h  register.c  register.h  string.c  sym.c  thread.c
test/: all.alisp
